fix grid overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,6 +47,7 @@ header {
 main {
   padding-top: 80px;
   padding-bottom: 80px;
+  min-width: 0;
 }
 
 footer {
